# SNES-OS-rs

./: .gitmodules  Cargo.toml
snesbios/: Cargo.toml
snesbios/src/: main.rs  syscall.rs
snesbios_startup/: Cargo.toml  startup.S  wc65c816-snesbios-startup.ld
snesos-kernel/: Cargo.toml
snesos-kernel/ld/: wc65816-snesdev-snes-os-kernel.ld
snesos-kernel/src/: errors.rs  file.rs  future.rs  lib.rs  map.rs  proc.rs  ptr.rs  syscall.rs  user.rs
src/: lib.rs
