[package]
name = "snesos_kernel"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snesdev = {path = "../SNES-Dev/rust", features = ["default","memctl"]}